--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -25,13 +25,14 @@
       "titleHighlight": "Tresors Artisanaux Lituaniens Authentiques",
       "subtitle": "Soutenez les artisans locaux de Lituanie. Chaque piece raconte une histoire unique de tradition et de savoir-faire.",
       "exploreProducts": "Explorer les produits",
-      "meetMakers": "Rencontrer les artisans"
+      "meetMakers": "Rencontrer les artisans",
+      "badge": "Preparation pour Kaziuko muge 2026"
     },
     "trustBadges": {
-      "freeShipping": "Livraison gratuite",
-      "freeShippingDesc": "Pour les commandes de plus de 50 EUR",
-      "securePayment": "Paiement securise",
-      "securePaymentDesc": "Paiement 100% protege",
+      "shipping": "Livraison gratuite",
+      "shippingDesc": "Pour les commandes de plus de 50 EUR",
+      "secure": "Paiement securise",
+      "secureDesc": "Paiement 100% protege",
       "returns": "Retours sous 30 jours",
       "returnsDesc": "Retours faciles et sans tracas",
       "authentic": "Artisanat authentique",
@@ -51,19 +52,26 @@
         "description": "Participez a des marches artisanaux, des ateliers et des expositions pour rencontrer des artisans."
       }
     },
+    "stats": {
+      "products": "Produits artisanaux",
+      "makers": "Artisans lituaniens",
+      "categories": "Categories d'artisanat",
+      "rating": "Note moyenne"
+    },
     "categories": "Acheter par categorie",
+    "categoriesDesc": "Explorez l'artisanat traditionnel lituanien",
     "featured": "Produits en vedette",
     "featuredMakers": "Artisans en vedette",
     "newArrivals": "Nouveautes",
     "viewAll": "Voir tout",
     "viewAllMakers": "Voir tous les artisans",
-    "kaziukoMuge": {
+    "kaziuko": {
       "title": "Kaziuko Muge 2026",
       "subtitle": "La plus grande foire artisanale traditionnelle de Lituanie",
-      "date": "6-8 mars 2026",
-      "location": "Vieille ville de Vilnius",
-      "description": "Rejoignez-nous a cette foire annuelle historique celebrant l'artisanat lituanien. Rencontrez nos artisans verifies en personne et decouvrez des tresors uniques faits main.",
-      "learnMore": "En savoir plus sur l'evenement"
+      "date": "Date",
+      "location": "Lieu",
+      "desc": "Rejoignez-nous a la foire traditionnelle de Kaziuko a Vilnius, du 6 au 8 mars 2026. Rencontrez nos artisans et decouvrez l'artisanat lituanien authentique.",
+      "countdown": "Plus que 34 jours!"
     },
     "becomeMakerCTA": {
       "title": "Devenir artisan",
@@ -73,6 +81,7 @@
   },
   "products": {
     "title": "Tous les produits",
+    "subtitle": "Decouvrez des articles artisanaux uniques",
     "items": "articles artisanaux",
     "by": "par",
     "addToCart": "Ajouter au panier",
@@ -82,7 +91,14 @@
     "inStock": "en stock",
     "customizable": "Personnalisable",
     "freeShipping": "Livraison gratuite",
-    "freeReturns": "Retours gratuits"
+    "freeReturns": "Retours gratuits",
+    "allCategories": "Toutes les categories",
+    "newest": "Plus recent",
+    "priceLow": "Prix: croissant",
+    "priceHigh": "Prix: decroissant",
+    "topRated": "Meilleurs notes",
+    "noProducts": "Aucun produit trouve",
+    "noProductsDesc": "Essayez d'ajuster vos filtres"
   },
   "cart": {
     "title": "Panier",
@@ -141,6 +157,26 @@
       "desc": "Rejoignez notre communaute grandissante d'artisans et partagez vos metiers traditionnels avec des clients a travers l'Europe."
     }
   },
+  "events": {
+    "title": "Evenements artisanaux",
+    "subtitle": "Decouvrez des ateliers, marches et expositions",
+    "upcoming": "A venir",
+    "ongoing": "En cours",
+    "all": "Tous",
+    "noEvents": "Aucun evenement trouve",
+    "noEventsDesc": "Revenez plus tard pour les evenements a venir",
+    "register": "S'inscrire",
+    "registered": "Inscrit",
+    "joinOnline": "Rejoindre en ligne",
+    "maxAttendees": "Participants max",
+    "types": {
+      "market": "Marche",
+      "workshop": "Atelier",
+      "exhibition": "Exposition",
+      "online": "En ligne",
+      "fair": "Foire"
+    }
+  },
   "footer": {
     "description": "Decouvrez des produits artisanaux uniques d'artisans talentueux de toute la Lituanie.",
     "shop": "Boutique",
@@ -153,10 +189,12 @@
     "sell": "Vendre",
     "makerResources": "Ressources",
     "makerGuidelines": "Guide des artisans",
-    "successStories": "Success stories",
+    "successStories": "Histoires de reussite",
     "copyright": "Crafts And Hands. Autonomiser les artisans lituaniens, une creation a la fois."
   },
   "categories": {
+    "title": "Categories",
+    "subtitle": "Explorez nos categories d'artisanat",
     "jewelry": "Bijouterie",
     "pottery": "Poterie",
     "ceramics": "Ceramique",
@@ -195,9 +233,27 @@
     "contact": "Besoin d'aide?",
     "contactDesc": "Contactez notre equipe de support client pour toute question concernant les retours."
   },
+  "successStories": {
+    "title": "Histoires de reussite",
+    "subtitle": "Ecoutez nos artisans qui ont developpe leur entreprise artisanale",
+    "ourImpact": "Notre impact",
+    "impactDesc": "Ensemble, nous preservons les traditions artisanales lituaniennes",
+    "writeYourStory": "Ecrivez votre histoire de reussite",
+    "writeYourStoryDesc": "Rejoignez notre communaute d'artisans et commencez votre voyage aujourd'hui",
+    "startJourney": "Commencez votre voyage"
+  },
+  "privacy": {
+    "title": "Politique de confidentialite",
+    "lastUpdated": "Derniere mise a jour"
+  },
+  "terms": {
+    "title": "Conditions d'utilisation",
+    "lastUpdated": "Derniere mise a jour"
+  },
   "becomeMaker": {
     "title": "Devenir artisan",
     "subtitle": "Rejoignez notre communaute d'artisans lituaniens talentueux et partagez votre metier avec des clients dans toute l'Europe.",
+    "badge": "Rejoignez 14+ artisans lituaniens",
     "kaziukoNotice": {
       "title": "Inscription Kaziuko Muge 2026 ouverte",
       "desc": "Postulez maintenant pour etre verifie avant la plus grande foire artisanale de Lituanie (6-8 mars). Les artisans verifies seront mis en avant lors de l'evenement."
@@ -218,7 +274,7 @@
       "securePayment": "Traitement securise des paiements",
       "shippingLabels": "Generation d'etiquettes d'expedition",
       "customerService": "Support service client",
-      "analytics": "Analyses et aperçus des ventes",
+      "analytics": "Analyses et apercus des ventes",
       "communityEvents": "Evenements communautaires et reseautage"
     },
     "eligibleCrafts": "Metiers eligibles",
@@ -238,13 +294,10 @@
     },
     "requirements": {
       "title": "Exigences",
-      "items": {
-        "authentic": "Artisanat traditionnel lituanien authentique",
-        "handmade": "Produits faits main uniquement",
-        "quality": "Artisanat de haute qualite",
-        "photos": "Photos de produits claires",
-        "shipping": "Capacite d'expedition dans l'UE"
-      }
+      "1": "Enregistrement d'entreprise valide ou certification d'artisan",
+      "2": "Photos de haute qualite de votre travail",
+      "3": "Capacite d'expedition en Lituanie et dans l'UE",
+      "4": "Communication reactive (sous 48 heures)"
     },
     "applyTitle": "Postuler pour devenir artisan",
     "form": {
@@ -270,18 +323,13 @@
       },
       "experience": "Annees d'experience",
       "selectExperience": "Selectionnez...",
+      "years": "ans",
       "craftDescription": "Decrivez votre artisanat",
       "craftDescriptionPlaceholder": "Parlez-nous de vos techniques artisanales, des materiaux que vous utilisez et de ce qui rend votre travail unique...",
       "socialMedia": "Reseaux sociaux / Site web",
       "socialMediaPlaceholder": "Instagram, Facebook ou URL de votre site web",
       "priceRange": "Gamme de prix typique",
-      "priceRangeOptions": {
-        "select": "Selectionnez une gamme de prix...",
-        "under50": "Moins de 50 EUR",
-        "50to100": "50 - 100 EUR",
-        "100to250": "100 - 250 EUR",
-        "over250": "Plus de 250 EUR"
-      },
+      "selectPriceRange": "Selectionnez...",
       "portfolio": "Lien portfolio (optionnel)",
       "portfolioPlaceholder": "https://instagram.com/votre-profil",
       "motivation": "Pourquoi voulez-vous nous rejoindre?",
@@ -292,7 +340,11 @@
     },
     "success": {
       "title": "Candidature soumise!",
-      "message": "Merci pour votre interet a rejoindre Crafts And Hands. Notre equipe examinera votre candidature et vous contactera dans les 5-7 jours ouvrables."
+      "message": "Merci pour votre interet a rejoindre Crafts And Hands. Notre equipe examinera votre candidature et vous contactera dans les 5-7 jours ouvrables.",
+      "nextSteps": "Que se passe-t-il ensuite?",
+      "step1": "Notre equipe examinera votre candidature dans les 5-7 jours ouvrables",
+      "step2": "Nous pourrions vous contacter pour des informations ou photos supplementaires",
+      "step3": "Une fois approuve, vous recevrez les instructions de configuration"
     },
     "error": "Une erreur s'est produite. Veuillez reessayer."
   },
